force-app/main/default/objects/ContentVersion/fields/FlowCreated__c.field-meta.xml
<CustomField>
    <fullName>FlowCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flow is created to restrict the user from deleting the copied over file from parent case.</description>
    <label>FlowCreated</label>
    <type>Checkbox</type>
</CustomField>