force-app/main/default/objects/ContentVersion/fields/HI_Fulfillment_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>HI_Fulfillment_Event_Id__c</fullName>
    <description>This will be used to link HI Fulfillment record to a file in Salesforce.</description>
    <externalId>true</externalId>
    <label>HI Fulfillment Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>