force-app/main/default/objects/ContentVersion/fields/State_Carrier_Id__c.field-meta.xml
<CustomField>
    <fullName>State_Carrier_Id__c</fullName>
    <description>This will contain the state carrier id for each file so we can group all files for one state carrier and attach onto a case</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>State Carrier Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>