force-app/main/default/objects/ContentVersion/fields/State_Carrier_Key__c.field-meta.xml
<CustomField>
    <fullName>State_Carrier_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>State Carrier Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>